tests/functionalTests/invalid/code/invalidMainFunType1.hs
main :: IO Int;
main = do {
    putStr "Main\n";
    return 5;
};
